Fixed spell padding causing delete button to jump ship

--- a/app/assets/stylesheets/encounters.css.scss
+++ b/app/assets/stylesheets/encounters.css.scss
@@ -222,7 +222,7 @@
             .spell {
               display: inline-block;
               vertical-align: top;
-              padding: 8px;
+              padding: 8px 2px 8px 2px;
               cursor: pointer;
               width: 50%;
               font-size: smaller;
